﻿2007-08-24  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/gui.h, src/gui/gui.cpp: Removed useless logic method and
	reverted mouse cursor to non-static since there can be only one Gui
	instance so there is no point in supporting a shared resource.
	* src/gui/window.cpp, src/gui/gui.h: Removed unnecessary
	Gui::isCustomCursor method.
	* src/gui/char_select.h, src/gui/char_select.cpp, src/utils/trim.h:
	Added trimming of name for new character creation.
	* src/net/chathandler.cpp: Added trimming of chat messages appearing
	above players.
	* src/gui/window.cpp, src/gui/window.h: Improved resize mouse cursor
	indication, removing duplicated code and fixing indicator above resize
	grip.

2007-08-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/viewport.h, src/gui/viewport.cpp: Removed two useless popup
	related methods.
	* src/gui/debugwindow.h, src/gui/debugwindow.cpp: Use generic close
	button functionality.
	* src/particle.h, src/particleemitter.cpp, src/particle.cpp: Renamed
	Particle::mVector to Particle::mVelocity for clarity.
	* src/localplayer.cpp, src/gui/ministatus.cpp, src/gui/status.cpp,
	src/being.cpp, src/net/charserverhandler.cpp,
	src/net/playerhandler.cpp, src/localplayer.h, src/being.h: Changed XP
	gaining effect to appear on the player instead.
	* data/graphics/gui/hits_yellow.png: Restored shadow of yellow font.

2007-08-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/itemshortcutcontainer.h: Fixed compiler warning.
	* src/CMakeLists.txt, src/Makefile.am: Updated source lists.
	* data/graphics/gui/CMakeLists.txt, data/graphics/gui/Makefile.am:
	Added close button and item shortcut backgrounds to files that will be
	installed.
	* src/gui/itemshortcutcontainer.cpp: Make sure mGridWidth and
	mGridHeight are initialized properly (fixes arithmetic exception in
	ItemShortcutContainer::draw).
	* src/keyboardconfig.cpp: Changed default sitting key back to 's'.
	* src/net/equipmenthandler.cpp: Removed a line that attempted to set